fix: gap between checkbox and label

--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -5,7 +5,7 @@
   &_checkbox {
     display: flex;
     flex-direction: row-reverse;
-    gap: 9px;
+    gap: 6px;
     align-items: center;
     justify-content: flex-end;
   }
